--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - LOG_PATH=${LOG_PATH}
       - ETHEREUM_RPC_ENDPOINT=${ETHEREUM_RPC_ENDPOINT}
       - ETHEREUM_RPC_MAX_CONCURRENT_REQUESTS=10
+      - ETHEREUM_RPC_MAX_BATCH_SIZE=100
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
