chore: upgrade slogcli

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,8 @@ services:
       - LOG_LEVEL=${LOG_LEVEL}
       - LOG_PATH=${LOG_PATH}
       - ETHEREUM_RPC_ENDPOINT=${ETHEREUM_RPC_ENDPOINT}
-      - ETHEREUM_RPC_MAX_CONCURRENT_REQUESTS=10
-      - ETHEREUM_RPC_MAX_BATCH_SIZE=100
+      - ETHEREUM_RPC_MAX_CONCURRENT_REQUESTS=${ETHEREUM_RPC_MAX_CONCURRENT_REQUESTS}
+      - ETHEREUM_RPC_MAX_BATCH_SIZE=${ETHEREUM_RPC_MAX_BATCH_SIZE}
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
