--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,25 @@ services:
       - ${BUNDLE_PATH:-./tmp/bundle.tar.gz}:/tmp/bundle.tar.gz:ro
     environment:
       - LOG_LEVEL=${LOG_LEVEL}
-      - LOG_PATH=${LOG_PATH}
-      - ETHEREUM_RPC_ENDPOINT=${ETHEREUM_RPC_ENDPOINT}
-      - ETHEREUM_RPC_MAX_CONCURRENT_REQUESTS=${ETHEREUM_RPC_MAX_CONCURRENT_REQUESTS}
-      - ETHEREUM_RPC_MAX_BATCH_SIZE=${ETHEREUM_RPC_MAX_BATCH_SIZE}
-      - AWS_REGION=${AWS_REGION}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+
+  minio:
+    image: minio/minio:latest
+    restart: always
+    command: ['server', '/data', '--address', ':9001', '--console-address', ':9002']    
+    ports:
+      - '9001:9001'
+      - '9002:9002' 
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=minio123
+
+  minio-bootstrap:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc alias set local http://minio:9001 minio minio123;
+      /usr/bin/mc mb local/test01;
+      exit 0;
+      "
